# paperforge

./: .gitignore  Caddyfile  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
api/: .coverage  Dockerfile  pyproject.toml
api/app/: main.py
api/app/models/: __init__.py  pdf.py
api/app/routers/admin/: __init__.py
api/app/routers/pdf/: __init__.py  render.py  sign.py
api/app/schema/: __init__.py
api/tests/routes/: test_render.py
app/: Dockerfile  boto3clients.py  deps.py  main.py  package-lock.json
app/routers/: render.py  sign.py
app/routers/admin/: __init__.py  apikeys.py  events.py
paperforge/: app.py  boto3clients.py  s3.py
tests/: conftest.py  test_app.py  test_s3.py
tests/routes/: test_render.py  test_sign.py
tests/routes/admin/: test_events.py
tests/samples/: template.html
