[project]
name = "paperforge"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.14",
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
    "sqlmodel>=0.0.24",
    "weasyprint>=66.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]

[tool.ruff]
target-version = "py311"
src = ["paperforge"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I"]
