[project]
name = "paperforge"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.14",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.135.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pyhanko[image-support,opentype,pkcs11,qr]>=0.31.0",
    "weasyprint>=66.0",
]

[dependency-groups]
dev = [
    "aiohttp>=3.12.15",
    "moto[s3]>=5.1.21",
    "pyhanko-cli>=0.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.5",
    "types-boto3[essential]>=1.40.35",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html -v"

[tool.ruff]
target-version = "py311"
src = ["paperforge"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I"]
